--- a/meteor-vue/static/css/form.css
+++ b/meteor-vue/static/css/form.css
@@ -31,6 +31,7 @@ label {
    border: 1px solid rgba(255, 255, 255, 0.3);
    text-shadow: none;
    color: #fff;
+   border-radius:5px;
    box-shadow: none;
    font-family: open-sans-regular;
    -webkit-appearance: none;
