--- a/meteor-vue/static/css/style.css
+++ b/meteor-vue/static/css/style.css
@@ -416,6 +416,7 @@ blockquote small {
     background: rgba(0,0,0,0.3);
     height: 100%;
     position: absolute;
+    overflow: hidden;
 }
 
 #sidebar .side-menu  {
@@ -2040,6 +2041,58 @@ a.list-group-item.active > .badge,
     #skin-blur-kiwi {
         background-image: url(../img/body/kiwi.jpg);
     }
+
+    #skin-blur-landscape {
+        background-image: url(../img/body/landscape.jpg);
+    }
+
+    #skin-blur-flour {
+        background-image: url(../img/body/flour.jpg);
+    }
+
+    #skin-blur-young {
+        background-image: url(../img/body/young.jpg);
+    }
+
+    #skin-blur-wonderland {
+        background-image: url(../img/body/wonderland.jpg);
+    }
+
+    #skin-blur-golden {
+        background-image: url(../img/body/golden.jpg);
+    }
+
+    #skin-blur-dark {
+        background-image: url(../img/body/dark.jpg);
+    }
+
+    #skin-blur-mind {
+        background-image: url(../img/body/mind.jpg);
+    }
+
+    #skin-blur-star {
+        background-image: url(../img/body/star.jpg);
+    }
+
+    #skin-blur-hill {
+        background-image: url(../img/body/hill.jpg);
+    }
+
+    #skin-blur-girl {
+        background-image: url(../img/body/girl.jpg);
+    }
+
+    #skin-blur-cloth {
+        background-image: url(../img/body/cloth.jpg);
+    }
+
+    #skin-blur-water {
+        background-image: url(../img/body/water.jpg);
+    }
+
+    #skin-blur-ink {
+        background-image: url(../img/body/ink.jpg);
+    }
     
     /* Sidebar */
     .side-menu > li > a:hover, .side-menu > li.active > a, .side-menu > li > a.active:hover, .side-menu > li.hovered > a {
@@ -2209,6 +2262,58 @@ a.list-group-item.active > .badge,
 
     #skin-blur-kiwi {
         background: #0f4731;
+    }
+
+    #skin-blur-landscape {
+        background: transparent;
+    }
+
+    #skin-blur-flour {
+        background: transparent;
+    }
+
+    #skin-blur-young {
+        background: transparent;
+    }
+
+    #skin-blur-wonderland {
+        background: transparent;
+    }
+
+    #skin-blur-golden {
+        background: transparent;
+    }
+
+    #skin-blur-dark {
+        background: transparent;
+    }
+
+    #skin-blur-mind {
+        background: transparent;
+    }
+
+    #skin-blur-star {
+        background: transparent;
+    }
+
+    #skin-blur-hill {
+        background: transparent;
+    }
+
+    #skin-blur-girl {
+        background: transparent;
+    }
+
+    #skin-blur-cloth {
+        background: transparent;
+    }
+
+    #skin-blur-water {
+        background: transparent;
+    }
+
+    #skin-blur-ink {
+        background: transparent;
     }
     
 
@@ -2410,235 +2515,73 @@ a.list-group-item.active > .badge,
 
 
 /*------------ Main Menu ------------*/
+.menu{
+      font-family: Helvetica;
+}
+.menu ul{
+    list-style: none;
+    margin:0px 0px 0px -35px;
+    padding:0;
+    width:160px;
+}
+.menu ul li{
+    margin:0;
+    padding:0;
+}
+.menu ul li a{
+    border:1px solid #ffffff;
+	border-radius:10px;
+    margin-top:1px;
+    padding-left: 0px;
+    padding-top: 2px;
+    display:block;
+    text-decoration: none;
+    color:white;
+    font-size:16px;
+    height:30px;
+    font-weight: lighter;
+}
+.menu ul li ul a{
+    border:0;
+    margin-top:2px;
+    margin-left:40px;
+    margin-right:-30px;
+    display:block;
+    text-decoration: none;
+    color:white;
+    font-size:14px;
+    height:25px;
+    font-weight: lighter;
+    text-align: center;
+}
+.menu ul li a:hover{
+    background-color: #0c3424;
+}
+.menu ul li ul a:hover{
+    background-color: #0c3424;
+}
+.menu ul li ul{
+    display:none;
 
-*{box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;}
-body{background:#f0f0f0;}
-.content{width:160px;margin:5px 0px;}
+}
+
 .filterinput{
 	background-color:rgba(249, 244, 244, 0);
 	border-radius:15px;
 	width:80%;
 	height:30px;
 	border:thin solid #FFF;
-	text-indent:0.5em;
-	font-weight:bold;
+	text-indent:1em;
+	font-weight:lighter;
+    font-size:8px;
 	color:#FFF;
-}
-#demo-list a{
-	overflow:hidden;
-	text-overflow:ellipsis;
-	-o-text-overflow:ellipsis;
-	white-space:nowrap;
-	width:180px;
-}
-
-.jquery-accordion-menu,.jquery-accordion-menu * {
-	font-family: 'Open Sans',sans-serif;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	outline: 0
-}
-
-.jquery-accordion-menu {
-	min-width: 130px;
-	float: left;
-	position: relative;
-	box-shadow: 0 20px 50px #333
-}
-
-.jquery-accordion-menu .jquery-accordion-menu-footer,.jquery-accordion-menu .jquery-accordion-menu-header {
-	width: 50%;
-	height: 50px;
-	padding-left: 22px;
-	float: left;
-	line-height: 50px;
-	font-weight: 600;
-	color: #f0f0f0;
-	background: #414956
-}
-
-.jquery-accordion-menu ul {
-	margin: 0;
-	padding: 0;
-	list-style: none
-}
-
-.jquery-accordion-menu ul li {
-	width: 50%;
-	display: block;
-	float: left;
-	position: relative
-}
-
-.jquery-accordion-menu ul li a {
-	width: 50%;
-	padding: 14px 22px;
-	float: left;
-	text-decoration: none;
-	color: #f0f0f0;
-	font-size: 13px;
-	background: #414956;
-	white-space: nowrap;
-	position: relative;
-	overflow: hidden;
-	-o-transition: color .2s linear,background .2s linear;
-	-moz-transition: color .2s linear,background .2s linear;
-	-webkit-transition: color .2s linear,background .2s linear;
-	transition: color .2s linear,background .2s linear
-}
-
-.jquery-accordion-menu>ul>li.active>a,.jquery-accordion-menu>ul>li:hover>a {
-	color: #fff;
-	background: #3b424d
-}
-
-.jquery-accordion-menu>ul>li>a {
-	border-bottom: solid 1px #3b424d
-}
-
-.jquery-accordion-menu ul li a i {
-	width: 34px;
-	float: left;
-	line-height: 18px;
-	font-size: 16px;
-	text-align: left
-}
-
-.jquery-accordion-menu .submenu-indicator {
-	float: right;
-	right: 22px;
-	position: absolute;
-	line-height: 19px;
-	font-size: 20px;
-	-o-transition: transform .3s linear;
-	-moz-transition: transform .3s linear;
-	-webkit-transition: transform .3s linear;
-	-ms-transition: transform .3s linear
-}
-
-.jquery-accordion-menu ul ul.submenu .submenu-indicator {
-	line-height: 16px
-}
-
-.jquery-accordion-menu .submenu-indicator-minus>.submenu-indicator {
-	-ms-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-webkit-transform: rotate(45deg);
-	transform: rotate(45deg)
-}
-
-.jquery-accordion-menu ul ul.submenu,.jquery-accordion-menu ul ul.submenu li ul.submenu {
-	width: 50%;
-	/*display: none;*/
-	position: static
-}
-
-.jquery-accordion-menu ul ul.submenu li {
-	clear: both;
-	width: 50%
-}
-
-.jquery-accordion-menu ul ul.submenu li a {
-	width: 50%;
-	float: left;
-	font-size: 11px;
-	background: #383838;
-	border-top: none;
-	position: relative;
-	border-left: solid 6px transparent;
-	-o-transition: border .2s linear;
-	-moz-transition: border .2s linear;
-	-webkit-transition: border .2s linear;
-	transition: border .2s linear
-}
-
-.jquery-accordion-menu ul ul.submenu li:hover>a {
-	border-left-color: #414956
-}
-
-.jquery-accordion-menu ul ul.submenu>li>a {
-	padding-left: 30px
-}
-
-.jquery-accordion-menu ul ul.submenu>li>ul.submenu>li>a {
-	padding-left: 0px
-}
-
-.jquery-accordion-menu ul ul.submenu>li>ul.submenu>li>ul.submenu>li>a {
-	padding-left: 60px
-}
-
-.jquery-accordion-menu ul li .jquery-accordion-menu-label,.jquery-accordion-menu ul ul.submenu li .jquery-accordion-menu-label {
-	min-width: 20px;
-	padding: 1px 2px 1px 1px;
-	position: absolute;
-	right: 18px;
-	top: 14px;
-	font-size: 11px;
-	font-weight: 800;
-	color: #555;
-	text-align: center;
-	line-height: 18px;
-	background: #f0f0f0;
-	border-radius: 100%
-}
-
-.jquery-accordion-menu ul ul.submenu li .jquery-accordion-menu-label {
-	top: 5px
-}
-
-.ink {
-	display: block;
-	position: absolute;
-	background: rgba(255,255,255,.3);
-	border-radius: 100%;
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-ms-transform: scale(0);
-	-o-transform: scale(0);
-	transform: scale(0)
-}
-
-.animate-ink {
-	-webkit-animation: ripple .5s linear;
-	-moz-animation: ripple .5s linear;
-	-ms-animation: ripple .5s linear;
-	-o-animation: ripple .5s linear;
-	animation: ripple .5s linear
-}
-
-@-webkit-keyframes ripple {
-	100% {
-		opacity: 0;
-		-webkit-transform: scale(2.5)
-	}
-}
-
-@-moz-keyframes ripple {
-	100% {
-		opacity: 0;
-		-moz-transform: scale(2.5)
-	}
-}
-
-@-o-keyframes ripple {
-	100% {
-		opacity: 0;
-		-o-transform: scale(2.5)
-	}
-}
-
-@keyframes ripple {
-	100% {
-		opacity: 0;
-		transform: scale(2.5)
-	}
 }
 
 
 .red.jquery-accordion-menu .jquery-accordion-menu-footer,.red.jquery-accordion-menu .jquery-accordion-menu-header,.red.jquery-accordion-menu ul li a {
-	background: #e4644b
+	/*background: #e4644b;*/
+    background: url(../img/body/sunset.jpg) no-repeat!important;
+    background-size: cover!important;
 }
 
 .red.jquery-accordion-menu>ul>li.active>a,.red.jquery-accordion-menu>ul>li:hover>a {
@@ -2646,7 +2589,8 @@ body{background:#f0f0f0;}
 }
 
 .red.jquery-accordion-menu>ul>li>a {
-	border-bottom-color: #d05942
+	border-bottom-color: #d05942;
+
 }
 
 .red.jquery-accordion-menu ul ul.submenu li:hover>a {
